added functionality to remove project from Expo Manager

--- a/app/renderer/css/ext.css
+++ b/app/renderer/css/ext.css
@@ -8,6 +8,15 @@
   border-color: #4630eb;
 }
 
+.danger-zone {
+  background-color: #dc3545;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  color: #fff;
+  margin: -0.5rem 0;
+  padding: 0.5rem 1.5rem;
+}
+
 /***
  * extend/extra styles
  ***/
