update local storage on delete -_-

--- a/app/renderer/css/ext.css
+++ b/app/renderer/css/ext.css
@@ -20,6 +20,10 @@
 /***
  * extend/extra styles
  ***/
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .column-align-end {
   display: flex;
   justify-content: flex-end;
